--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "bcrypt-nodejs": "0.0.3",
+        "bcrypt": "^3.0.4",
         "body-parser": "^1.18.3",
         "connect-multiparty": "^2.2.0",
         "express": "^4.16.4",
         "jwt-simple": "^0.5.5",
         "moment": "^2.24.0",
         "mongoose": "^5.4.19",
-        "mongoose-pagination": "^1.0.0"
+        "mongoose-pagination": "^1.0.0",
+        "mongoose-unique-validator": "^2.0.2",
+        "underscore": "^1.9.1"
     }
 }
